add translation for aenderungen-verwerfen-dialog

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,7 @@
 {
+    "changes-dialog.discard": "Änderungen verwerfen",
+    "changes-dialog.question": "Möchten Sie die vorgenommenen Änderungen wirklich verwerfen?",
+    
     "login.login": "Zugangsdaten",
     "login.username": "Benutzername",
     "login.pwd": "Passwort",
