add translation for nutzungsvereinbarung

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,6 +19,20 @@
     "changevm.cancel": "Cancel",
     "changevm.set": "Set VM",
 
+    "privacy.policy": "Privacy policy",
+    "privacy.privacy": "Data privacy",
+    "privacy.notice1": "When you log in to or use the bwLehrpool suite, various information about you is collected and stored. The following points should help you to understand which data is used for which purpose and where you can turn to if you have any questions.",
+    "privacy.question1": "What is being collected?",
+    "privacy.answer1": "When you log in, your name, e-mail, university and the time of your last login are stored and assigned to a unique user ID. This also includes information about when you first registered for use. In addition, information about some of your activities within the bwLehrpool suite is recorded (for example, when you upload or delete a VM).",
+    "privacy.question2": "What is this data collected for?",
+    "privacy.answer2": "The information is necessary to clearly assign VMs and events to you or your colleagues and, if necessary, to intervene in case of legal violations. When you download VMs (from the satellite server or public storage), you certainly want to know by whom a VM was created and whom you can contact if the VM does not work as expected. Also, usage data is important for diagnostic purposes so that an administrator can help you if, for example, you can no longer find your VM and suspect that someone deleted it by mistake.",
+    "privacy.question3": "With whom is this data shared?",
+    "privacy.answer3": "The collected data is stored exclusively on the satellite server to which you connected during login. This is usually under the control of your university's data center. When using the suite for the first time, you were asked to register via a web portal. This is necessary to obtain your consent to store and process your data for the purpose of cross-university VM exchange. The information provided there is under the management of the bwLehrpool team in Freiburg. When you upload a VM to public storage, the VM and associated metadata (owner/creator name, time of creation and last modification) is transferred to the central server of the bwLehrpool team in Freiburg. Users from other universities participating in bwLehrpool can now also view your VM as well as the associated (contact) data.",
+    "privacy.question4": "How long will data be stored?",
+    "privacy.answer4": "Information is stored until it is no longer needed to provide the necessary functionality. This also depends on factors such as the type of information, why it is collected and processed, and relevant legal or operational storage needs.",
+    "privacy.question5": "Where can I go if I have questions?",
+    "privacy.answer5": "First, contact your data center. Usually, the satellite server to which your bwLehrpool suite connects by default is operated there. If you cannot find a contact person there, you can contact the bwLehrpool developer team (bwlehrpool@hs-offenburg.de).",
+
     "login.login": "Login",
     "login.username": "Username",
     "login.pwd": "Password",
