--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -19,6 +19,20 @@
     "changevm.cancel": "Abbrechen",
     "changevm.set": "VM festlegen",
 
+    "privacy.policy": "Datenschutzerklärung",
+    "privacy.privacy": "Datenschutz",
+    "privacy.notice1": "Wenn Sie sich an der bwLehrpool-Suite anmelden bzw. diese nutzen, werden verschiedene Informationen über Sie erfasst und gespeichert. Die nachfolgenden Punkte sollen Ihnen helfen zu verstehen, welche Daten zu welchem Zweck verwendet werden und wohin Sie sich bei Fragen wenden können.",
+    "privacy.question1": "Was wird gesammelt?",
+    "privacy.answer1": "Beim Login werden Name, E-Mail, Hochschule sowie Zeitpunkt des letzten Logins gespeichert und einer eindeutigen Nutzer-ID zugeordnet. Dies umfasst auch Informationen darüber, wann Sie sich für die Nutzung erstmalig registriert haben. Außerdem werden Informationen über einige Ihrer Aktivitäten innerhalb der bwLehrpool-Suite erfasst (beispielsweise wenn Sie eine VM hochladen oder löschen).",
+    "privacy.question2": "Wozu werden diese Daten gesammelt?",
+    "privacy.answer2": "Die Informationen sind notwendig, um VMs und Veranstaltungen Ihnen bzw. Ihren Kollegen eindeutig zuordnen und ggf. bei rechtlichen Verstößen eingreifen zu können. Wenn Sie VMs herunterladen (vom Satellitenserver oder öffentlichen Speicher), möchten Sie sicherlich wissen, von wem eine VM erstellt wurde und wen Sie ggf. kontaktieren können, falls die VM nicht wie erwartet funktioniert. Außerdem sind Nutzungsdaten für Diagnosezwecke wichtig, damit ein Administrator Ihnen helfen kann, falls Sie z.B. Ihre VM nicht mehr finden können und vermuten, dass diese von jemandem fälschlicherweise gelöscht wurde.",
+    "privacy.question3": "Mit wem werden diese Daten geteilt?",
+    "privacy.answer3": "Die erhobenen Daten werden ausschließlich auf dem Satellitenserver gespeichert, mit dem Sie sich während des Logins verbunden haben. Dieser steht in der Regel unter der Kontrolle des Rechenzentrums Ihrer Hochschule. Bei der erstmaligen Nutzung der Suite wurden Sie aufgefordert, sich über ein Webportal zu registrieren. Dies ist notwendig, um Ihre Zustimmung zur Speicherung und Verarbeitung Ihrer Daten zum Zweck des hochschulübergreifenden VM-Austauschs einzuholen. Die dort angegebenen Informationen stehen unter der Verwaltung des bwLehrpool-Teams in Freiburg. Wenn Sie eine VM auf den öffentlichen Speicher hochladen, wird die VM sowie damit verknüpfte Metadaten (Name des Besitzers/Erstellers, Zeitpunkt der Erstellung und letzten Änderung) auf den zentralen Server des bwLehrpool-Teams in Freiburg übertragen. Auch Nutzer anderer an bwLehrpool teilnehmenden Hochschulen können nun Ihre VM sowie die damit verbundenen (Kontakt-)Daten einsehen.",
+    "privacy.question4": "Wie lange werden Daten gespeicher?",
+    "privacy.answer4": "Informationen werden gespeichert, bis sie nicht mehr benötigt werden, um die notwendige Funktionalität bereitzustellen. Dies hängt auch von Faktoren wie der Art der Informationen, warum sie gesammelt und verarbeitet werden sowie den relevanten rechtlichen oder betrieblichen Speicherbedürfnissen ab.",
+    "privacy.question5": "Wohin kann ich mich bei Fragen wenden?",
+    "privacy.answer5": "Kontaktieren Sie als erstes Ihr Rechenzentrum. In der Regel wird dort der Satellitenserver, mit dem sich Ihre bwLehrpool-Suite standardmäßig verbindet, betrieben. Falls Sie dort keinen Ansprechpartner finden, können Sie sich an das Entwickler-Team von bwLehrpool (bwlehrpool@hs-offenburg.de) wenden.",
+
     "login.login": "Zugangsdaten",
     "login.username": "Benutzername",
     "login.pwd": "Passwort",
