add translation for create-veranstaltung

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -62,7 +62,54 @@
     "useragreement.notice1": "The use of this program is only permitted in coordination with the respective participating university institution and is subject to its regulations and restrictions. Virtual machines created and provided within the framework of the bwLehrpool system that contain software that is not freely licensed may only be used and distributed with the permission or licensing of the relevant rights holders.",
     "useragreement.notice2": "In particular, it is expressly pointed out that the responsibility with regard to any necessary licensing of all software within a Virtual Machine, regular updating and timely importing of security updates lies exclusively with the creating personnel.",
     "useragreement.licence": "Program licensing",
-    "useragreement.notice4": "No warranty of any kind, express or implied, is made with respect to this program to the fullest extent permitted by law. The copyright holder provides the program as is. The full risk as to quality, performance or any general, special, incidental or consequential damages arising out of the use or inability to use the program (including loss of data or misprocessing of data) rests with the user."
+    "useragreement.notice4": "No warranty of any kind, express or implied, is made with respect to this program to the fullest extent permitted by law. The copyright holder provides the program as is. The full risk as to quality, performance or any general, special, incidental or consequential damages arising out of the use or inability to use the program (including loss of data or misprocessing of data) rests with the user.",
+
+    "createlecture.new": "Create new lecture",
+    "createlecture.entername": "Please enter a descriptive name for the lecture.",
+    "createlecture.name": "Lecture name *",
+    "createlecture.notice1": "Lecture name must not be empty",
+    "createlecture.description": "Description",
+    "createlecture.descriptionerror": "Description must not be empty",
+    "createlecture.startday": "Start *",
+    "createlecture.startdayerror": "Start date must not be empty",
+    "createlecture.startdayinfo": "The start date must be before the end date.",
+    "createlecture.endday": "End *",
+    "createlecture.enddayerror": "End date must not be empty",
+    "createlecture.amount": "Duration of the lecture",
+    "createlecture.image": "Link VM",
+    "createlecture.imageerror": "Select a VM for this lecture. *",
+    "createlecture.notice2": "Show only usable/linkable",
+    "createlecture.puclicimages": "Public VMs",
+    "createlecture.visible": "Visible:",
+    "createlecture.owner": "Owner",
+    "createlecture.changed": "Changed",
+    "createlecture.expiration": "Expiration",
+    "createlecture.size": "Size",
+    "createlecture.usable": "Usable",
+    "createlecture.permission": "Set permissions",
+    "createlecture.permissionnotice": "Set the desired permissions here.",
+    "createlecture.permissionuser": "User",
+    "createlecture.permissionedit": "Edit",
+    "createlecture.adduser": "Add user",
+    "createlecture.standardpermission": "Standard permissions",
+    "createlecture.standardpermissionnotice": "Set the permissions for all other users (not shown in the list) here.",
+    "createlecture.options": "Additional options",
+    "createlecture.optionsoptions": "Please select from the following options:",
+    "createlecture.general": "General",
+    "createlecture.uptodate": "Always update to the latest VM version",
+    "createlecture.activ": "Lecture is active",
+    "createlecture.exam": "Lecture is an exam",
+    "createlecture.restriction": "Restrictions",
+    "createlecture.network": "Allow network/Internet access",
+    "createlecture.storage": "Allow storage media",
+    "createlecture.rooms": "Room selection",
+    "createlecture.selectroom": "Please select the rooms for this lecture.",
+    "createlecture.amountrooms": "There are too many rooms selected",
+    "createlecture.limitlocation": "Show lecture exclusively in the selected rooms",
+    "createlecture.limitlocation2": "Show lecture with higher priority in the selected rooms",
+    "createlecture.cancel": "Cancel",
+    "createlecture.finish": "Finish",
+    "createlecture.days": "Day(s)"
 
 
 }
