--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -62,6 +62,53 @@
     "useragreement.notice1": "Die Verwendung dieses Programms ist nur in Abstimmung mit der jeweils beteiligten Hochschulinstitution zulässig und unterliegt deren Bestimmungen und Einschränkungen. Im Rahmen des bwLehrpool-Systems erstellte und bereitgestellte Virtuelle Maschinen, die unfrei lizensierte Software enthalten, dürfen nur mit Erlaubnis bzw. Lizenzierung der betreffenden Rechteinhaber eingesetzt und weitergegeben werden.",
     "useragreement.notice2": "Insbesondere wird ausdrücklich darauf hingewiesen, dass die Verantwortung in Bezug auf eventuell notwendige Lizenzierung sämtlicher Software innerhalb einer Virtuellen Maschine, regelmäßiger Aktualisierung und rechtzeitigen Einspielens von Sicherheitsupdates ausschließlich beim erstellenden Personal liegt.",
     "useragreement.licence": "Lizenzierung des Programms",
-    "useragreement.notice4": "Es wird, soweit gesetzlich zulässig, keinerlei Gewährleistung für dieses Programm, weder ausdrücklich noch implizit, geleistet. Der Urheberrechtsinhaber stellt das Programm „wie es ist“ zur Verfügung. Es werden einschließlich Marktreife oder Verwendbarkeit für einen bestimmten Zweck keinerlei Eigenschaften zugesichert.Das volle Risiko bezüglich Qualität, Leistungsfähigkeit oder jeglicher allgemeiner oder spezieller Schäden, Schäden durch Nebenwirkungen oder Folgeschäden, die aus Benutzung oder Unbenutzbarkeit des Programms folgen (einschließlich Datenverlusten oder fehlerhafter Verarbeitung von Daten)liegt auf Seiten des Anwenders / der Anwenderin."
+    "useragreement.notice4": "Es wird, soweit gesetzlich zulässig, keinerlei Gewährleistung für dieses Programm, weder ausdrücklich noch implizit, geleistet. Der Urheberrechtsinhaber stellt das Programm „wie es ist“ zur Verfügung. Es werden einschließlich Marktreife oder Verwendbarkeit für einen bestimmten Zweck keinerlei Eigenschaften zugesichert.Das volle Risiko bezüglich Qualität, Leistungsfähigkeit oder jeglicher allgemeiner oder spezieller Schäden, Schäden durch Nebenwirkungen oder Folgeschäden, die aus Benutzung oder Unbenutzbarkeit des Programms folgen (einschließlich Datenverlusten oder fehlerhafter Verarbeitung von Daten)liegt auf Seiten des Anwenders / der Anwenderin.",
+
+    "createlecture.new": "Neue Veranstaltung anlegen",
+    "createlecture.entername": "Bitte geben Sie einen aussagekräftigen Namen für die Veranstaltung ein.",
+    "createlecture.name": "Veranstaltungsname *",
+    "createlecture.notice1": "Veranstaltungsname darf nicht leer sein",
+    "createlecture.description": "Beschreibung",
+    "createlecture.descriptionerror": "Beschreibung darf nicht leer sein",
+    "createlecture.startday": "Startdatum *",
+    "createlecture.startdayerror": "Startdatum darf nicht leer sein",
+    "createlecture.startdayinfo": "Das Startdatum muss vor dem Enddatum liegen.",
+    "createlecture.endday": "Enddatum *",
+    "createlecture.enddayerror": "Enddatum darf nicht leer sein",
+    "createlecture.amount": "Dauer der Veranstaltung",
+    "createlecture.image": "VM verknüpfen",
+    "createlecture.imageerror": "Wählen Sie eine VM für diese Veranstaltung aus. *",
+    "createlecture.notice2": "Nur verwendbare/linkbare anzeigen",
+    "createlecture.puclicimages": "Öffentliche VMs",
+    "createlecture.visible": "Sichtbar:",
+    "createlecture.owner": "Besitzer",
+    "createlecture.changed": "Geändert",
+    "createlecture.expiration": "Ablaufdatum",
+    "createlecture.size": "Größe",
+    "createlecture.usable": "Verwendbar",
+    "createlecture.permission": "Berechtigungen festlegen",
+    "createlecture.permissionnotice": "Legen Sie hier die gewünschten Berechtigungen fest.",
+    "createlecture.permissionuser": "Benutzer",
+    "createlecture.permissionedit": "Bearbeiten",
+    "createlecture.adduser": "Benutzer hinzufügen",
+    "createlecture.standardpermission": "Standardberechtigungen",
+    "createlecture.standardpermissionnotice": "Legen Sie hier die Berechtigungen für alle anderen (nicht in der Liste angezeigten) Benutzer fest.",
+    "createlecture.options": "Zusätzliche Optionen",
+    "createlecture.optionsoptions": "Bitte wählen Sie aus folgenden Optionen aus:",
+    "createlecture.general": "Allgemein",
+    "createlecture.uptodate": "Immer auf aktuellste VM-Version updaten",
+    "createlecture.activ": "Veranstaltung ist aktiv",
+    "createlecture.exam": "Veranstaltung ist eine Prüfung",
+    "createlecture.restriction": "Restrictions",
+    "createlecture.network": "Netzwerk-/Internetzugriff zulassen",
+    "createlecture.storage": "Speichermedien zulassen",
+    "createlecture.rooms": "Raumauswahl",
+    "createlecture.selectroom": "Bitte wählen Sie die Räume für diese Veranstaltung aus.",
+    "createlecture.amountrooms": "Es sind zu viele Räume ausgewählt",
+    "createlecture.limitlocation": "Veranstaltung ausschließlich in den ausgewählten Räumen anzeigen",
+    "createlecture.limitlocation2": "Veranstaltung mit höherer Priorität in den ausgewählten Räumen anzeigen",
+    "createlecture.cancel": "Abbrechen",
+    "createlecture.finish": "Fertigstellen",
+    "createlecture.days": "Tag(e)"
 
 }
