add transaltion for veranstaltung

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -150,7 +150,69 @@
     "vms.size": "Größe",
     "vms.usable": "Verwendbar",
     "vms.template": "Vorlage",
-    "vms.totalsize": "Gesamtgröße"
+    "vms.totalsize": "Gesamtgröße",
+
+    "lecture.general": "Allgemein",
+    "lecture.resttriction": "Beschränkungen",
+    "lecture.room": "Raumauswahl",
+    "lecture.permission": "Berechtigungen",
+    "lecture.network": "Netzlaufwerke",
+    "lecture.name": "Veranstaltungsname darf nicht leer sein",
+    "lecture.owner": "Besitzer",
+    "lecture.edit": "Ändern",
+    "lecture.description": "Beschreibung",
+    "lecture.descriptionnotice": "Beschreibung darf nicht leer sein",
+    "lecture.date": "Erstellt am",
+    "lecture.changed": "Geändert am",
+    "lecture.linked": "Verknüpfte VM",
+    "lecture.startdate": "Startdatum",
+    "lecture.startdatenotempty": "Startdatum darf nicht leer sein",
+    "lecture.startdatenotice": "Das Startdatum muss vor dem Enddatum liegen.",
+    "lecture.enddate": "Enddatum",
+    "lecture.active": "Veranstaltung aktiv",
+    "lecture.enddatenotice": "Enddatum darf nicht leer sein",
+    "lecture.update": "Immer aktuellste Version verwenden",
+    "lecture.notice1": "Legen Sie hier fest, ob die Veranstaltung den Zugriff auf Speichermedien (CD, USB, ...) erlauben soll.",
+    "lecture.notice2": "Externe Speichermedien zulassen",
+    "lecture.notice3": "Markieren Sie diese Veranstaltung als E-Prüfung.",
+    "lecture.notice4": "Die Prüfung wird nur dann startbar sein, wenn Leerpool.nrw in den Prüfungsmodus versetzt wird. Kontaktieren Sie dazu Ihren lokalen Leerpool.nrw-Administrator.",
+    "lecture.exammode": "Prüfungsmodus",
+    "lecture.notice5": "Legen Sie hier fest, ob die Veranstaltung Zugriff zum Internet haben soll. In der Liste können Sie bestimmte Adressen und Services ein- oder ausschalten.",
+    "lecture.networkpermission": "Netzwerk-/Internetzugriff zulassen",
+    "lecture.networkrule": "Netzwerkregeln",
+    "lecture.networknotice": "Überprüfung noch nicht möglich",
+    "lecture.notice6": "Wenn Sie den Internetzugriff deaktiviert haben, können Sie hier Ausnahmen definieren Whitelist). Bitte definieren Sie Ihre Regeln im Format",
+    "lecture.notice7": "Sie können Port 0 angeben, was sämtlichen TCP und UDP Ports eines Hosts entspricht.",
+    "lecture.blacklist": "Wenn Sie Internetzugriff aktivieren, hat diese Liste den gegenteiligen Effekt (Blacklist).",
+    "lecture.rules": "Regeln überprüfen",
+    "lecture.location": "Es sind zu viele Räume ausgewählt.",
+    "lecture.location2": "Veranstaltung ausschließlich in den ausgewählten Räumen anzeigen",
+    "lecture.location3": "Veranstaltung mit höherer Priorität in den ausgewählten Räumen anzeigen",
+    "lecture.function": "Funktionalität noch nicht gegeben",
+    "lecture.notice8": "Ein hier eingetragenes Skript wird nach dem Start der VM automatisch ausgeführt.",
+    "lecture.extension": "Dateinamenserweiterung",
+    "lecture.visible": "Sichtbarkeit",
+    "lecture.user": "Benutzer",
+    "lecture.edit2": "Bearbeiten",
+    "lecture.adduser": "Benutzer hinzufügen",
+    "lecture.otheruser": "Andere Nutzer",
+    "lecture.otheruserinfo": "Hier können Sie die Rechte für nicht in der Liste angegebene Nutzer festlegen",
+    "lecture.notice9": "Hier können Sie Netzlaufwerke angeben, die automatisch beim Start der Veranstaltung eingebunden werden sollen. Der Platzhalter %loginuser% wird im Pfad durch den Loginnamen des Nutzers ersetzt.",
+    "lecture.path": "Pfad",
+    "lecture.drive": "Laufwerk",
+    "lecture.auth": "Authentifizierung",
+    "lecture.pwd": "Passwort",
+    "lecture.owndrive": "Eigenes Netzlaufwerk definieren",
+    "lecture.printer": "Drucker",
+    "lecture.username": "Benutzername",
+    "lecture.adddrive": "Netzlaufwerk hinzufügen",
+    "lecture.notice10": "Geben Sie hier LDAP Filter ein, die die Sichtbarkeit der Veranstaltung abhängig vom angemeldeten Benutzer einschränken. Eine Veranstaltung ist sichtbar, sobald einer der angegebenen Filter zutrifft. Zusätzliche Raumbeschränkungen greifen weiterhin.",
+    "lecture.attr": "Attribut",
+    "lecture.value": "Wert",
+    "lecture.ownfilter": "Eigenen Filter hinzufügen",
+    "lecture.addfilter": "Filter hinzufügen",
+    "lecture.save": "Speichern",
+    "lecture.through": "durch"
 
 
 }
