--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -150,7 +150,69 @@
     "vms.size": "Size",
     "vms.usable": "Usable",
     "vms.template": "Template",
-    "vms.totalsize": "Total size"
+    "vms.totalsize": "Total size",
+
+    "lecture.general": "General",
+    "lecture.resttriction": "Restrictions",
+    "lecture.room": "Room selection",
+    "lecture.permission": "Permissions",
+    "lecture.network": "Network drives",
+    "lecture.name": "lecture name cannot be empty",
+    "lecture.owner": "Owner",
+    "lecture.edit": "Change",
+    "lecture.description": "Description",
+    "lecture.descriptionnotice": "Description cannot be empty",
+    "lecture.date": "Created on",
+    "lecture.changed": "Modified on",
+    "lecture.linked": "Linked VM",
+    "lecture.startdate": "Starting date",
+    "lecture.startdatenotempty": "Start date cannot be empty",
+    "lecture.startdatenotice": "The start date must be before the end date.",
+    "lecture.enddate": "End date",
+    "lecture.active": "Lecture active",
+    "lecture.enddatenotice": "End date cannot be empty",
+    "lecture.update": "Always use the latest version",
+    "lecture.notice1": "Specify here whether the event should allow access to storage media (CD, USB, ...).",
+    "lecture.notice2": "Allow external storage devices",
+    "lecture.notice3": "Mark this lecture as an e-exam.",
+    "lecture.notice4": "The check will only be startable if Leerpool.nrw is set to check mode. Contact your local Leerpool.nrw administrator for this.",
+    "lecture.exammode": "Exam mode",
+    "lecture.notice5": "Specify here whether the lecture should have access to the Internet. In the list you can enable or disable specific addresses and services.",
+    "lecture.networkpermission": "Allow network/Internet access",
+    "lecture.networkrule": "Network rules",
+    "lecture.networknotice": "Verification not yet possible",
+    "lecture.notice6": "If you have disabled Internet access, you can define exceptions here Whitelist). Please define your rules in the format",
+    "lecture.notice7": "You can specify port 0, which corresponds to all TCP and UDP ports of a host.",
+    "lecture.blacklist": "If you enable Internet access, this list has the opposite effect (blacklist).",
+    "lecture.rules": "Check rules",
+    "lecture.location": "There are too many rooms selected.",
+    "lecture.location2": "Show lecture exclusively in the selected rooms",
+    "lecture.location3": "Show lecture with higher priority in the selected rooms",
+    "lecture.function": "Functionality not yet given",
+    "lecture.notice8": "A script entered here is automatically executed after the VM is started.",
+    "lecture.extension": "File name extension",
+    "lecture.visible": "Visibility",
+    "lecture.user": "User",
+    "lecture.edit2": "Edit",
+    "lecture.adduser": "Add user",
+    "lecture.otheruser": "Other users",
+    "lecture.otheruserinfo": "Here you can set the rights for users not specified in the list",
+    "lecture.notice9": "Here you can specify network drives that should be automatically mounted when the lecture is started. The placeholder %loginuser% is replaced in the path by the user's login name.",
+    "lecture.path": "Path",
+    "lecture.drive": "Drive",
+    "lecture.auth": "Authentication",
+    "lecture.pwd": "Password",
+    "lecture.owndrive": "Define own network drive",
+    "lecture.printer": "Printer",
+    "lecture.username": "Username",
+    "lecture.adddrive": "Add a network drive",
+    "lecture.notice10": "Enter LDAP filters here that restrict the visibility of the lecture depending on the logged in user. An event is visible as soon as one of the specified filters applies. Additional room restrictions still apply.",
+    "lecture.attr": "Attribute",
+    "lecture.value": "Value",
+    "lecture.ownfilter": "Add your own filter",
+    "lecture.addfilter": "Add filter",
+    "lecture.save": "Save",
+    "lecture.through": "by"
 
 
 
