add translation for VM

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -231,7 +231,38 @@
     "lecturesdialog.delete": "Veranstaltungen löschen",
     "lecturesdialog.question": "Möchten Sie die folgenden Veranstaltungen wirklich löschen?",
     "lecturedialog.yes": "Ja",
-    "lecturesdialog.no": "Nein"
+    "lecturesdialog.no": "Nein",
+
+    "vm.overview": "Übersicht",
+    "vm.version": "VM-Versionen",
+    "vm.permission": "Berechtigungen",
+    "vm.notepmty": "VM-Name darf nicht leer sein",
+    "vm.description": "Beschreibung",
+    "vm.descriptionnotempty": " Beschreibung darf nicht leer sein",
+    "vm.owner": "Besitzer",
+    "vm.change": "Ändern",
+    "vm.date": "Erstellt am",
+    "vm.changed": "Geändert am",
+    "vm.os": "Betriebssystem",
+    "vm.mode": "Freigabemodus",
+    "vm.template": "Vorlage",
+    "vm.versionid": "Versions-ID",
+    "vm.virtualizer": "Virtualisierer",
+    "vm.creation": "Erstellungszeitpunkt",
+    "vm.expiration": "Ablaufszeitpunkt",
+    "vm.creator": "Ersteller",
+    "vm.usable": "Verwendbar",
+    "vm.size": "Größe",
+    "vm.internalid": "Interne ID",
+    "vm.user": "Benutzer",
+    "vm.link": "Verlinken",
+    "vm.edit": "Bearbeiten",
+    "vm.adduser": "Benutzer hinzufügen",
+    "vm.otheruser": "Andere Nutzer",
+    "vm.list": "Hier können Sie die Rechte für nicht in der Liste angegebene Nutzer festlegen",
+    "vm.upload": "Neue Version hochladen",
+    "vm.save": "Speichern",
+    "vm.by": "durch"
 
 
 }
