--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -231,7 +231,38 @@
     "lecturesdialog.delete": "Delete lectures",
     "lecturesdialog.question": "Do you really want to delete the following lectures?",
     "lecturedialog.yes": "Yes",
-    "lecturesdialog.no": "No"
+    "lecturesdialog.no": "No",
+
+    "vm.overview": "Overview",
+    "vm.version": "VM-Versions",
+    "vm.permission": "Permissions",
+    "vm.notepmty": "VM name cannot be empty",
+    "vm.description": "Description",
+    "vm.descriptionnotempty": "Description cannot be empty",
+    "vm.owner": "Owner",
+    "vm.change": "Changed",
+    "vm.date": "Created on",
+    "vm.changed": "Modfied on",
+    "vm.os": "Operating system",
+    "vm.mode": "Release mode",
+    "vm.template": "Template",
+    "vm.versionid": "Version-ID",
+    "vm.virtualizer": "Virtualizer",
+    "vm.creation": "Time of creation",
+    "vm.expiration": "Expiration date",
+    "vm.creator": "Creator",
+    "vm.usable": "Usable",
+    "vm.size": "Size",
+    "vm.internalid": "Internal ID",
+    "vm.user": "User",
+    "vm.link": "Link",
+    "vm.edit": "Edit",
+    "vm.adduser": "Add user",
+    "vm.otheruser": "Other user",
+    "vm.list": "Here you can set the rights for users not specified in the list",
+    "vm.upload": "Upload new version",
+    "vm.save": "Save",
+    "vm.by": "by"
 
 
 
